--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body{
     margin: 4px;
     padding: 4px;
-    background-color: azure;
+    background-color: lightgray;
 }
 
 .mainBody{
@@ -68,8 +68,9 @@ body{
     
 }
 
-hr.rounded {
-    width: 10px;
-    border-top: 8px solid;
+.vl {
+    border-left: 6px solid white;
+    height: 450px;
     border-radius: 5px;
+    margin-top: 10px;
 }
